--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "prettier": "prettier --write \"**/*.{js,jsx,tsx,ts,less,md,json}\"",
     "test": "umi-test",
     "test:coverage": "umi-test --coverage",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "commit": "cz"
   },
   "homepage": "https://leena-sudo.github.io/react-screen-editor-simple",
   "repository": {
@@ -56,6 +57,12 @@
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.1",
     "umi-plugin-icons": "^0.1.1",
-    "yorkie": "^2.0.0"
+    "yorkie": "^2.0.0",
+    "cz-conventional-changelog":"^3.3.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
