--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@ant-design/colors": "^6.0.0",
     "classnames": "^2.3.2",
+    "commitizen": "^4.2.5",
     "eslint": "^8.27.0",
     "react": "^18.0.0",
     "react-dom": "^18.2.0",
@@ -51,6 +52,7 @@
     "@types/jest": "^27.0.3",
     "@umijs/fabric": "^3.0.0",
     "@umijs/test": "^3.0.5",
+    "cz-conventional-changelog": "^3.3.0",
     "dumi": "^1.1.0",
     "father": "^4.0.0-rc.2",
     "father-build": "^1.22.5",
@@ -59,12 +61,11 @@
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.1",
     "umi-plugin-icons": "^0.1.1",
-    "yorkie": "^2.0.0",
-    "cz-conventional-changelog":"^3.3.0"
+    "yorkie": "^2.0.0"
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "cz-conventional-changelog"
     }
   }
 }
