--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "umi-test",
     "test:coverage": "umi-test --coverage",
     "prepublishOnly": "npm run build",
+    "lint": "eslint src --fix --ext .ts,.tsx ",
     "commit": "cz"
   },
   "homepage": "https://leena-sudo.github.io/react-screen-editor-simple",
@@ -39,6 +40,8 @@
   },
   "dependencies": {
     "@ant-design/colors": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
     "classnames": "^2.3.2",
     "eslint": "^8.27.0",
     "react": "^18.0.0",
@@ -54,6 +57,8 @@
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
     "dumi": "^1.1.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "father": "^4.1.0",
     "father-build": "^1.22.5",
     "gh-pages": "^4.0.0",
